feat: Add barcode search functionality with visual feedback and highlight matching names

--- a/reservierungen.html
+++ b/reservierungen.html
@@ -112,6 +112,11 @@
           onfocus="this.removeAttribute('readonly');" inputmode="none" autocomplete="off">
         <div class="barcode-status" id="barcodeStatus">Bereit zum Scannen...</div>
       </div>
+
+      <div class="barcode-actions">
+        <button type="button" id="barcodeSearchBtn" class="btn-primary">🔍 Suchen</button>
+        <button type="button" id="barcodeCancelBtn" class="btn-secondary">Abbrechen</button>
+      </div>
     </div>
   </div>
 
